fix --columnGap problem.
inside the `. / sass / grid / columns.sass` file there is already the` $ column-gap` variable defined with the same value as the `--columnGap` parameter and that the file structure behaves in exactly the same way but , by using `$ column-gap` the problem does not occur in any case.

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -9598,50 +9598,58 @@ label.panel-block:hover {
 }
 
 .columns.is-variable {
-  --columnGap: 0.75rem;
-  margin-left: calc(-1 * var(--columnGap));
-  margin-right: calc(-1 * var(--columnGap));
+  margin-left: calc(-1 * $column-gap);
+  margin-right: calc(-1 * $column-gap);
 }
 
 .columns.is-variable .column {
-  padding-left: var(--columnGap);
-  padding-right: var(--columnGap);
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .columns.is-variable.is-0 {
-  --columnGap: 0rem;
+  -webkit-column-gap: 0rem;
+          column-gap: 0rem;
 }
 
 .columns.is-variable.is-1 {
-  --columnGap: 0.25rem;
+  -webkit-column-gap: 0.25rem;
+          column-gap: 0.25rem;
 }
 
 .columns.is-variable.is-2 {
-  --columnGap: 0.5rem;
+  -webkit-column-gap: 0.5rem;
+          column-gap: 0.5rem;
 }
 
 .columns.is-variable.is-3 {
-  --columnGap: 0.75rem;
+  -webkit-column-gap: 0.75rem;
+          column-gap: 0.75rem;
 }
 
 .columns.is-variable.is-4 {
-  --columnGap: 1rem;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
 }
 
 .columns.is-variable.is-5 {
-  --columnGap: 1.25rem;
+  -webkit-column-gap: 1.25rem;
+          column-gap: 1.25rem;
 }
 
 .columns.is-variable.is-6 {
-  --columnGap: 1.5rem;
+  -webkit-column-gap: 1.5rem;
+          column-gap: 1.5rem;
 }
 
 .columns.is-variable.is-7 {
-  --columnGap: 1.75rem;
+  -webkit-column-gap: 1.75rem;
+          column-gap: 1.75rem;
 }
 
 .columns.is-variable.is-8 {
-  --columnGap: 2rem;
+  -webkit-column-gap: 2rem;
+          column-gap: 2rem;
 }
 
 .tile {
