--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -466,12 +466,11 @@ $column-gap: 0.75rem !default
 
 @if $variable-columns
   .columns.is-variable
-    --columnGap: 0.75rem
-    margin-left: calc(-1 * var(--columnGap))
-    margin-right: calc(-1 * var(--columnGap))
+    margin-left: calc(-1 * $column-gap)
+    margin-right: calc(-1 * $column-gap)
     .column
-      padding-left: var(--columnGap)
-      padding-right: var(--columnGap)
+      padding-left: $column-gap
+      padding-right: $column-gap
     @for $i from 0 through 8
       &.is-#{$i}
-        --columnGap: #{$i * 0.25rem}
+        column-gap: #{$i * 0.25rem}
